# SirkkalaBot

./: .replit  README.md  code.py  conftest.py  core.py  data.yaml  fuzzy.py  keep_alive.py  main.py  parse.py  pyproject.toml  tests.py
