[tool.poetry]
name = "repl_python3_SirkkalaBot"
version = "0.1.0"
description = ""
authors = ["mikaelho <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.0"
pytest = "^6.2.4"
PyYAML = "^5.4.1"
quart = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
